# quantification-of-sewer-pipe-damages

./: .env.example  .gitignore  README.md  condaenv.u6o30wfl.requirements.txt  eda.ipynb  environment.yml  example.py  factory.py  pipeline.py  pyproject.toml  requirements.txt  script.sh  setup.py  summary.csv
eda/: plot_script.py
preprocessing/: __init__.py  transforms.py
quantifiers/: __init__.py  base.py  break.py  connection.py  crack.py  deformation.py  deposition.py  joint_damage.py  material_loss.py  misalignment.py  obstacle.py  root.py
scripts/: download_images.py
tests/: test_break.py  test_connection.py  test_crack.py  test_deformation.py  test_deposition.py  test_joint_damage.py  test_material_loss.py  test_misalignment.py  test_obstacle.py  test_root.py
