[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sewer_damage"
version = "0.1.0"
description = "Framework for quantifying sewer pipe damage"
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.18.0",
    "pytest",
    "ruff",
    "jupyter",
    "pandas",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "tqdm",
]